# rust-game

starter/: Makefile
starter/c_output/: test_game_exe
starter/my_game_engine/: Cargo.toml  build.rs
starter/my_game_engine/src/: ffi.rs  lib.rs  main.rs
starter/my_game_engine/src/opengl_wrapper_lib/: opengl_wrapper_lib.h
starter/my_game_engine/tests/: test_game.rs
